base/network/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "books.app.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-books
            port:
              number: 5000
